[tool.poetry]
name = "alarm-clock"
version = "0.1.0"
description = "A simple alarm clock."
authors = ["MaxJPaul <max.developer10001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlmodel = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
